--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
     margin: 0px;
     padding: 0px;
+    background-color: rgb(220, 220, 220);
 }
 
 h1 {
     text-align: center;
     font-size: 100px;
-    
+    font-family: 'Poppins', sans-serif;
+    margin: 0px;
 }
 
 div {
