--- a/style.css
+++ b/style.css
@@ -1,31 +1,70 @@
+* {
+    margin: 0px;
+    padding: 0px;
+    font-family: 'Poppins', sans-serif;
+}
+
 body {
     margin: 0px;
     padding: 0px;
     background-color: rgb(220, 220, 220);
 }
 
-h1 {
+header h1 {
     text-align: center;
     font-size: 100px;
-    font-family: 'Poppins', sans-serif;
-    margin: 0px;
 }
 
 div {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     align-content: center;
     justify-content: center;
 }
 
-div a {
-    font-size: 50px;
+header div a {
     color: black;
     text-decoration: none;
 }
 
-div a img{
+header div a img{
     height: 50px;
     padding: 10px;
     margin: 10px;
+}
+
+section h2 {
+    text-align: center;
+    font-size: 40px;
+    margin: 10px;
+    margin-bottom: 0px;
+    padding: 10px;
+    border-radius: 20px;
+}
+
+
+section h2, section div a {
+    background-color: rgba(200, 200, 200, 0.4);
+}
+
+section h2:hover {
+    background-color: rgba(200, 200, 200, 0.8);
+}
+
+section div a:hover {
+    background-color: rgba(200, 200, 200, 0.6);
+}
+
+section div {
+    align-content: center;
+}
+
+section div a {
+    font-size: 20px;
+    text-decoration: none;
+    color: black;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 10px;
 }
