--- a/style.css
+++ b/style.css
@@ -1,71 +1,53 @@
-* {
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Poppins', sans-serif;
-}
+/* document body styling */
 
 body {
-    margin: 0px;
-    padding: 0px;
-    background-color: rgb(220, 220, 220);
+    background: AliceBlue;
+    max-width: 900px;
+    margin: auto;
+    padding: 0 16px;
+    font-family: sans-serif;
 }
 
-header h1 {
+::selection {
+    background-color: PowderBlue;
+}
+
+/* styling the titles and headers */
+
+h1 {
+    color: SlateBlue;
+}
+
+h2 {
+    color: IndianRed;
+}
+
+header, footer {
     text-align: center;
-    font-size: 100px;
 }
 
-div {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
+/* the styling for the bullet points in the achievements */
+
+.math {
+    color: DimGray;
 }
 
-header div a {
-    color: black;
-    text-decoration: none;
+.science {
+    color: SlateGray;
 }
 
-header div a img{
-    height: 50px;
-    padding: 10px;
-    margin: 10px;
+/* styling for links */
+
+a {
+    color: MediumSlateBlue;
 }
 
-section h2 {
-    text-align: center;
-    font-size: 40px;
-    margin: 10px;
-    margin-bottom: 0px;
-    padding: 10px;
-    border-radius: 20px;
+a:visited {
+    color: LightSlateBlue;
 }
 
+/* styling for the different size viewing modes */
 
-section h2, section div a {
-    background-color: rgba(200, 200, 200, 0.4);
-}
-
-section h2:hover {
-    background-color: rgba(200, 200, 200, 0.8);
-}
-
-section div a:hover {
-    background-color: rgba(200, 200, 200, 0.6);
-}
-
-section div {
-    align-content: center;
-}
-
-section div a {
-    font-size: 20px;
-    text-decoration: none;
-    color: black;
-    margin: 20px;
-    padding: 10px;
-    border-radius: 10px;
-    text-align: center;
+@media (min-width: 50em) {
+    	.twocol { column-count: 2 ;}
 }
