--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* document body styling */
 
 body {
-    background: AliceBlue;
+    background: Snow;
     max-width: 900px;
     margin: auto;
     padding: 0 16px;
@@ -68,7 +68,7 @@ a:visited {
 /* styling for the module div */
 
 .module * {
-    margin: 0;
+    margin: 0px;
 }
 
 .module {
@@ -107,12 +107,11 @@ a:visited {
 }
 
 .module-title {
-    margin: 0px;
     font-weight: bold;
 }
 
-.module-date {
-    margin: 0px;
+.module-brief {
+    font-style: italic;
 }
 
 /* styling for the different size viewing modes */
