changed style and updated resume

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
   --sel-color: #2D4F67;
 
-  --accent-color: #7e9cd8;
+  --accent-color: #C0A36E;
 
   --complete-color: #76946a;
   --in-progress-color: #c0a36e;
