--- a/style.css
+++ b/style.css
@@ -100,6 +100,14 @@ header nav a {
   padding: 5px;
 }
 
+/* Footer formatting */
+
+footer {
+  padding: 10px;
+  margin-top: 25px;
+  text-align: center;
+}
+
 /* main formatting */
 
 main {
