--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ article h1 {
 article h2, article h3 {
   font-size: medium;
   text-decoration: none;
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 article hgroup {
@@ -174,6 +174,7 @@ article hgroup * {
 article hgroup .date {
   position: absolute;
   right: 0px;
+  bottom: 0px;
 }
 
 article ul, article dd {
