--- a/style.css
+++ b/style.css
@@ -23,12 +23,13 @@
 
 body {
   background-color: var(--bg-color);
+  background-image: url(./assets/dots.svg);
   color: var(--fg-color);
   font-family: monospace;
   font-size: medium;
+  padding: 10px;
   margin: auto;
-  padding: 0px 10px 50px 10px;
-  max-width: 1000px;
+  max-width: 1200px;
 }
 
 h1, h2 {
@@ -74,18 +75,22 @@ table caption {
 
 /* Header formatting */
 
-header h1 {
-  font-size: xx-large;
-  text-align: center;
-  margin-bottom: 10px;
-}
-
 header {
-  padding: 10px;
+  border: 2px solid var(--border-color);
+  border-radius: 10px;
+  background-color: var(--bg-color);
+  padding: 20px;
+  margin: 10px;
 }
 
 header * {
   text-align: center;
+}
+
+header h1 {
+  font-size: xx-large;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 header nav {
@@ -103,8 +108,11 @@ header nav a {
 /* Footer formatting */
 
 footer {
-  padding: 10px;
-  margin-top: 25px;
+  border: 2px solid var(--border-color);
+  border-radius: 10px;
+  background-color: var(--bg-color);
+  padding: 20px;
+  margin: 10px;
   text-align: center;
 }
 
@@ -120,8 +128,12 @@ main {
 
 main nav {
   order: 1;
-  padding: 10px;
-  width: 300px;
+  border: 2px solid var(--border-color);
+  border-radius: 10px;
+  background-color: var(--bg-color);
+  padding: 20px;
+  margin: 10px;
+  width: 200px;
   position: sticky;
   top: 0px;
   flex-shrink: 0;
@@ -135,6 +147,9 @@ main nav h1 {
 
 main nav ul {
   list-style-type: none;
+}
+
+main nav ul ul {
   padding-left: 20px;
 }
 
@@ -142,7 +157,22 @@ main nav ul {
 
 article {
   order: 0;
+  border: 2px solid var(--border-color);
+  border-radius: 10px;
+  background-color: var(--bg-color);
+  padding: 20px;
+  margin: 10px;
   flex-grow: 2;
+}
+
+article h1:first-child {
+  margin-top: 0px;
+}
+
+article h1:not(:first-child) {
+  border-top: 2px solid var(--border-color);
+  margin-top: 20px;
+  padding-top: 20px;
 }
 
 article * {
@@ -153,7 +183,6 @@ article h1 {
   font-size: x-large;
   text-decoration: underline;
   text-underline-position: under;
-  margin-top: 25px;
 }
 
 article h2, article h3 {
