--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ footer {
 main {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: stretch;
 }
 
 /* toc formatting */
@@ -134,10 +134,6 @@ main nav {
   padding: 20px;
   margin: 10px;
   width: 200px;
-  max-height: calc(100vh - 84px);
-  overflow: scroll;
-  position: sticky;
-  top: 20px;
   flex-shrink: 0;
 }
 
