added plotting functionality to build

--- a/style.css
+++ b/style.css
@@ -80,6 +80,12 @@ math, math * {
   font-size: small;
 }
 
+figure * {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Header formatting */
 
 header {
