--- a/style.css
+++ b/style.css
@@ -26,13 +26,35 @@
 
 body {
   background-color: var(--bg-color);
-  background-image: url(./assets/dots.svg);
   color: var(--fg-color);
   font-family: monospace;
   font-size: medium;
   padding: 10px;
   margin: auto;
   max-width: 900px;
+}
+
+.bg-fixed {
+  background: url(./assets/dots.svg);
+  background-size: 5px 5px;
+  /* background: url(./assets/heart.png);
+  background-size: 100px 100px; */
+  position: fixed;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  /* animation: bgloop 6s linear infinite; */
+  z-index: -1;
+  /* opacity: 0.15; */
+}
+
+@keyframes bgloop {
+  from {
+    background-position: top left;
+  }
+  to {
+    background-position: 100px -100px;
+  }
 }
 
 h1, h2 {
