--- a/style.css
+++ b/style.css
@@ -6,12 +6,6 @@
   --link-color: #D27E99;
   --sel-color: #2D4F67;
   --accent-color: #C0A36E;
-  
-  --red: #E46876;
-  --orange: #FFA066;
-  --aqua: #7AA89F;
-  --green: #98BB6C;
-  --yellow: #E6C384;
 }
 
 * {
@@ -29,7 +23,6 @@ body {
   color: var(--fg-color);
   font-family: monospace;
   font-size: medium;
-  padding: 10px;
   margin: auto;
   max-width: 900px;
 }
@@ -115,7 +108,7 @@ header {
   border-radius: 10px;
   background-color: var(--bg-color);
   padding: 20px;
-  margin: 10px;
+  margin: 20px 10px;
 }
 
 header hgroup * {
@@ -135,63 +128,21 @@ footer {
   border-radius: 10px;
   background-color: var(--bg-color);
   padding: 20px;
-  margin: 10px;
+  margin: 20px 10px;
 }
 
-/* main formatting */
-
-main {
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-}
-
-/* toc formatting */
-
-main nav {
-  order: 1;
-  border: 2px solid var(--border-color);
-  border-radius: 10px;
-  background-color: var(--bg-color);
-  padding: 20px;
-  margin: 10px;
-  width: 220px;
-  flex-shrink: 0;
-}
-
-main nav > ul > li:first-child {
-  margin-top: 0px;
-}
-
-main nav h1 {
-  text-align: center;
-  font-size: medium;
-  margin-bottom: 5px;
-}
-
-main nav ul {
-  list-style-type: none;
-}
-
-main nav li {
+footer *:not(:first-child) {
   margin-top: 5px;
 }
-
-main nav ul ul {
-  padding-left: 20px;
-}
-
 
 /* injected text formatting */
 
 article {
-  order: 0;
   border: 2px solid var(--border-color);
   border-radius: 10px;
   background-color: var(--bg-color);
   padding: 20px;
-  margin: 10px;
-  flex-grow: 2;
+  margin: 20px 10px;
 }
 
 article h1:first-child {
