--- a/style.css
+++ b/style.css
@@ -170,16 +170,20 @@ article h2, article h3 {
   margin-top: 15px;
 }
 
-article hgroup {
+article .wide {
   margin-top: 0px;
   position: relative;
 }
 
-article hgroup * {
+article .wide * {
   display: inline-block;
 }
 
-article hgroup .date {
+article .wide :not(h1,h2,h3,h4,h5,h6) {
+  margin: 0px;
+}
+
+article .wide .right {
   position: absolute;
   right: 0px;
   bottom: 0px;
