--- a/assets/episodic.css
+++ b/assets/episodic.css
@@ -17,6 +17,15 @@ footer {
   grid-area: f;
 }
 
+h2 {
+  color: var(--fg-color);
+  font-weight: normal;
+}
+
+h2 strong {
+  color: var(--accent-color);
+}
+
 .intro {
   grid-area: i;
 }
