--- a/assets/base.css
+++ b/assets/base.css
@@ -4,7 +4,7 @@
 
   --border-color: #54546D;
   --link-color: #D27E99;
-  --code-color: #7AA89F;
+  --code-color: #7FB4CA;
   --sel-color: #2D4F67;
   --accent-color: #C0A36E;
 }
