--- a/assets/style.css
+++ b/assets/style.css
@@ -27,11 +27,20 @@ body {
   font-size: medium;
   margin: auto;
   padding: 20px;
-  display: grid;
+  width: 720px;
 }
 
-h1, h2 {
+.episode, footer {
+  margin-top: 20px;
+}
+
+h1, h2 strong {
   color: var(--accent-color);
+}
+
+h2 {
+  color: var(--fg-color);
+  font-weight: normal;
 }
 
 a, a:visited {
@@ -63,6 +72,7 @@ table {
 
 table col {
   width: min-content !important;
+  min-width: 50px;
 }
 
 table td, table tr, table th, table caption {
