--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,9 @@
   /* to stop the mobile resizing that occurs normally */
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
+  
+  font-family: monospace;
+  font-size: medium;
 }
 
 /* general global formats */
@@ -23,25 +26,22 @@ body {
   background-color: var(--bg-color);
   background-image: url(./dots.svg);
   color: var(--fg-color);
-  font-family: monospace;
-  font-size: medium;
   margin: auto;
   padding: 20px;
-  width: 720px;
+  max-width: 800px;
+  min-width: 700px;
 }
 
-.episode, footer {
+main, footer {
   margin-top: 20px;
 }
 
-h1, h2 strong {
+h1, h2, h3 {
   color: var(--accent-color);
 }
 
-h2 {
-  color: var(--fg-color);
-  font-weight: normal;
-}
+h1 {font-size: 2em;}
+h2 {font-size: 1.5em;}
 
 a, a:visited {
   color: var(--link-color);
@@ -63,6 +63,8 @@ code {
 table th, table td {
   border: 2px solid var(--border-color);
 }
+
+table .invis { border: none; }
 
 table {
   border-collapse: collapse;
@@ -89,14 +91,12 @@ math, math * {
   font-size: small;
 }
 
-figure * {
+figure {
   display: block;
+  width: 50%;
   margin-left: auto;
   margin-right: auto;
-}
-
-hr.lynx {
-  display: none;
+  text-align: center;
 }
 
 /* Header formatting */
@@ -109,16 +109,16 @@ header {
   text-align: center;
 }
 
-hgroup {
-  display: inline-block;
+header hgroup {
+  display: block;
 }
 
-hgroup * {
+header hgroup * {
   display: inline;
   vertical-align: middle;
 }
 
-hgroup h1 {
+header hgroup h1 {
   font-size: xx-large;
 }
 
@@ -143,70 +143,63 @@ footer *:not(:first-child) {
   margin-top: 5px;
 }
 
-/* injected text formatting */
+/* Main formatting */
 
-.episode {
+main {
   border: 2px solid var(--border-color);
   border-radius: 10px;
   background-color: var(--bg-color);
   padding: 20px;
 }
 
-.episode h1:first-child {
-  margin-top: 0px;
-}
-
-.episode h1:not(:first-child) {
-  border-top: 2px solid var(--border-color);
-  margin-top: 20px;
-  padding-top: 20px;
-}
-
-.episode * {
+main * {
   margin-top: 5px;
 }
 
-.episode h1 {
-  font-size: x-large;
+main h2:not(:first-child) {
+  margin-top: 20px;
+}
+
+main h2 {
   text-decoration: underline;
 }
 
-.episode h2, .episode h3 {
-  font-size: medium;
-  text-decoration: none;
+main h3, main hgroup {
   margin-top: 15px;
-  position: relative;
 }
 
-.episode .right {
-  position: absolute;
-  right: 0px;
-  bottom: 0px;
+main > :first-child {
+  margin-top: 0px;
 }
 
-.episode ul, .episode dd {
+ul, dd {
   padding-left: 20px;
 }
 
-.episode ol {
+ol {
   padding-left: 30px;
 }
 
-.episode li {
-  position: relative;
-}
-
-.episode img {
+img {
   max-width: 100%;
 }
 
-.episode table {
+table {
   margin-top: 10px;
 }
 
-.episode hr {
-  width: 30%;
-  margin: auto;
-  margin-top: 10px;
+main hgroup {
+  position: relative;
+  display: block;
+}
+
+main hgroup * {
+  display: inline;
+}
+
+.right {
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
 }
 
